# web-hw-8

./: authors.json  config.ini  connect.py  main.py  models.py  pyproject.toml  quotes.json  scrape.py  seeds.py
pt2/: consumer.py  producer.py
