[tool.poetry]
name = "web-hw-8"
version = "0.1.0"
description = ""
authors = ["NikitaDobry27 <bazhenov.nikita27@gmail.com>"]
readme = "README.md"
packages = [{include = "web_hw_8"}]

[tool.poetry.dependencies]
python = "^3.10"
mongoengine = "^0.27.0"
pymongo = "^4.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
