[tool.poetry]
name = "web-hw-8"
version = "0.1.0"
description = ""
authors = ["NikitaDobry27 <bazhenov.nikita27@gmail.com>"]
readme = "README.md"
packages = [{include = "web_hw_8"}]

[tool.poetry.dependencies]
python = "^3.10"
mongoengine = "^0.27.0"
pymongo = "^4.4.0"
prettytable = "^3.8.0"
pika = "^1.3.2"
faker = "^18.11.2"
requests = "^2.31.0"
bs4 = "^0.0.1"
lxml = "^4.9.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
